[tool.poetry]
name = "mfn"
version = "0.1.0"
description = "Implementation in Python of the MFN method to measure complexity & entropy of time series."
authors = ["Adriel Martins <am.adriel.martins@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
ordpy = "^1.1.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
