[tool.poetry]
name = "mfn"
version = "0.1.0"
description = "Implementation in Python of the MFN method to measure complexity & entropy of time series."
authors = ["Adriel Martins <am.adriel.martins@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [ 
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Machine Learning :: Time Series :: Entropy :: Complexity",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls] 
"Homepage" = "https://github.com/Martins6/mfn"
"Paper" = "https://www.sciencedirect.com/science/article/pii/S0960077923001613"
"Source" = "https://github.com/Martins6/mfn"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
ordpy = "^1.1.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
